schema/testdata/validation_relationships_attr_related_field_must_not_be_duplicated/schema.keel
model Author {
    fields {
        age Number
        written Post[]
    }
}

model Post {
    fields {
        author Author @relation(written)
        coAuthor Author @relation(written)
    }
}
